# base.dtoo

./: .gitignore  Cargo.toml  LICENSE  README.md  bsconfig.json  package-lock.json  package.json  server.js  server.rs
frontend/: Blog.res  Button.res  Footer.res  Header.res  Home.res  Index.res  LocalStorage.res  Navbar.res  Projects.res  Scrollview.res  Sidebar.res  Theme.res  Types.res  bundle.esbuild.js  index.html  index.res  types.res
